# Byteman

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs_doxygen/: Doxyfile.in
include/: LockedCommands.h  cli.h  commands.h  crypto.h  utils.h
src/: crypto.c  main.c  utils.c
src/cli/: CliParse.c  CommandDispatch.c  cli_parse.c  command_dispatch.c
src/commands/: get.c  login.c  signup.c
src/commands/locked/: login.c  signup.c
src/commands/open/: get.c
src/utils/: crypto.c  utils.c
